feat: improve facilities catalogue with validation, search, delete confirmation, and UI polish